examples/test/testpolicy15467.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15467
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key38: value13
      key3: value11
      key47: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value35
          key15: value45
          key17: value49
      podSelector:
        matchLabels:
          key12: value33
          key32: value14
          key17: value3
